# rust_mandelbrot

./: Cargo.toml  README.md  main.rs
src/: main.rs
