[package]
name = "rust_mandelbrot"
version = "0.1.0"
authors = ["Maciej Sinilo <maciejsinilo@o2.pl>"]

[dependencies]
minifb = ">= 0.9.0" 
rayon = "1.0.3"

[target.i686-unknown-linux-gnu.dependencies]
x11-dl = "2.18.3"

[target.x86_64-unknown-linux-gnu.dependencies]
x11-dl = "2.18.3"

[target.arm-unknown-linux-gnueabihf.dependencies]
x11-dl = "2.18.3"

[target.aarch64-unknown-linux-gnu.dependencies]
x11-dl = "2.18.3"

[target.x86_64-unknown-dragonfly.dependencies]
x11-dl = "2.18.3"

[target.x86_64-unknown-freebsd.dependencies]
x11-dl = "2.18.3"

[target.x86_64-unknown-redox.dependencies]
orbclient = "0.3.20"